# Orafinite

./: .dockerignore  .env.example  README.md  docker-compose.yml
ml_server/: Dockerfile  healthcheck.py  requirements.gpu.txt  requirements.txt  server.py
ml_server/scanners/: garak_scanner.py  llm_gard_scanner.py  llm_guard_scanner.py
nginx/: nginx.conf
ora_client/: .dockerignore  Dockerfile  drizzle.config.ts  next.config.ts  package.json  proxy.ts
ora_client/app/: globals.css  layout.tsx  page.tsx
ora_client/assets/svgs/: index.ts  scribble-arrow-to-right.tsx
ora_client/components/animated-icons/: moon.tsx  sun.tsx
ora_client/db/: schema.ts
ora_client/hooks/: use-esewa-payment.ts  use-guard-events.ts  use-subscription.ts
ora_client/lib/: api.ts  auth-client.ts  auth.ts  db.ts  esewa.ts  plans.ts  scanner-meta.ts  session.ts
proto/: ml_service.proto
server/: .gitignore  Cargo.toml  Dockerfile  build.rs
server/migrations/: 001_initial_schema.sql  002_make_scan_fields_optional.sql  003_richer_guard_logs.sql  004_api_key_guard_config.sql  005_enhanced_scan_tracking.sql  006_scan_remote_id.sql  007_esewa_payments.sql
server/src/: main.rs
server/src/api/: api_keys.rs  auth.rs  events.rs  guard.rs  guard_logs.rs  health.rs  mod.rs  models.rs  organization.rs  routes.rs  scan.rs
server/src/cache/: mod.rs
server/src/config/: mod.rs
server/src/db/: mod.rs  queries.rs  write_buffer.rs
server/src/grpc/: ml_client.rs  mod.rs
server/src/middleware/: auth.rs  mod.rs  rate_limit.rs
server/src/models/: mod.rs  organization.rs  scan.rs  user.rs
server/src/utils/: mod.rs
(+50 files in other folders)
