[package]
name = "orafinite-api"
version = "0.1.0"
edition = "2024"
description = "Orafinite AI Security Platform - Backend API"
authors = ["Orafinite Team"]

[dependencies]
# Web Framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# gRPC (for Python ML sidecar)
tonic = "0.12"
prost = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# DateTime
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }

# Password Hashing
argon2 = "0.5"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Encryption (AES-256-GCM for model API keys)
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

# JWT (for API tokens)
jsonwebtoken = "9"

# Environment & Config
dotenvy = "0.15"
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error Handling
thiserror = "2"
anyhow = "1"

# Validation
validator = { version = "0.19", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
